Portrait layout on mobile has overlapping elements Fixes #26

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,16 @@
-.App {
-  text-align: center;
+.drawerOpen {
+  margin: 0 2rem;
+  width: calc(100% - 4rem);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.drawerClosed {
+  margin: 0 2rem;
+  width: calc(100% - 4rem);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (min-width: 768px) {
+  .drawerOpen {
+    margin: 0 2rem 0 calc(17rem + 64px);
+    width: calc(100% - 19rem - 64px);
   }
 }
